--- a/front-end/src/pages/Home.css
+++ b/front-end/src/pages/Home.css
@@ -1,5 +1,167 @@
+@import url('https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
 .home-container {
-    padding: 20px;
-    background-color: #f0f0f0;
-  }
-  
+  min-height: 100vh;
+  width: 100%;
+  background: linear-gradient(135deg, #ffde59, #ff914d);
+  padding: 20px;
+  font-family: 'Poppins', sans-serif;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+
+.home-header {
+  width: 100%;
+  display: flex;
+  justify-content: flex-end;
+  margin-bottom: 10px;
+}
+
+/* utilisateur */
+.header-right {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+
+
+.user-avatar {
+  width: 60px;
+  height: 60px;
+  object-fit: cover;
+}
+
+
+.user-details {
+  display: flex;
+  flex-direction: column;
+  text-align: right;
+}
+
+.user-name {
+  font-family: "Poppins", serif;
+  font-weight: 600;
+  font-size: 2rem;
+  color: #000;
+
+}
+
+
+
+/* les gardes */
+.sector-title {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  margin-bottom: 10px;
+}
+
+.user-zone-left {
+  color: #000;
+  font-family: "DM Sans", serif;
+  margin-bottom: 2rem;
+  font-weight: 600;
+  margin-bottom: 5px;
+}
+
+.working-times {
+  color: #000;
+  font-family: "DM Sans", serif;
+  margin-bottom: 1rem;
+  font-weight: 300;
+  margin-bottom: 5px;
+}
+
+.separator {
+  width: 100%;
+  border: none;
+  height: 2px;
+  background-color: #000000;
+  margin: 20px 0;
+}
+
+/* Liste des semaines */
+.weeks-list {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+  margin-bottom: 30px;
+}
+
+
+.week-item-row {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 8px;
+  background: rgba(255, 255, 255, 0.413);
+  border-radius: 6px;
+}
+
+
+.week-dates {
+  color: #000;
+  font-family: "DM Sans", serif;
+  margin-bottom: 1rem;
+  font-weight: 300;
+  margin-bottom: 5px;
+}
+
+
+.week-item { 
+  width: 80%;
+  border: none;
+  padding: 10px 90px;
+  color: #fff;
+  font-weight: 600;
+  border-radius: 6px;
+  cursor: pointer;
+  font-size: 1rem;
+  text-align: center;
+}
+
+/* Baromètre */
+.barometer-container {
+  width: 90%;
+  background-color:  rgba(255, 255, 255, 0.413);
+  padding: 15px;
+  border-radius: 8px;
+  position: absolute;
+  bottom: 20px;
+}
+
+.barometer-title {
+  font-size: 1.5rem;
+  font-family: "DM Sans", serif;
+  font-weight: 300;
+  color: #000000;
+  text-align: center;
+  margin-bottom: 10px;
+}
+
+.barometer-value {
+  font-size: 1.5rem;
+  font-weight: 400;
+  color: #000000;
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+.barometer {
+  width: 100%;
+  height: 20px;
+  background-color: #ffffff;
+  border-radius: 10px;
+  overflow: hidden;
+  position: relative;
+}
+
+.barometer-fill {
+  height: 100%;
+  transition: width 0.3s ease;
+}
